# bot-webpanel

./: Cargo.toml  README.md  data
src/: bot.rs  main.rs  server.rs  shared.rs
static/: style.css
templates/: change_channel.html.tera  homepage.html.tera  messages.html.tera  messages_error.html.tera  users.html.tera
