[package]
name = "bot-webpanel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
fancy-regex = "0.11.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"] }
toml = "0.7.4"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
